# agent-tool-whitelist

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_tool_whitelist/: __init__.py  core.py
src/agent_tool_whitelist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_whitelist.py
